# alexdemo

file-meta/: .travis.yml  README.md  conanfile.py
file-meta/file-meta/: CMakeLists.txt  conanfile.txt
file-meta/file-meta/include/filemeta/: hashes.h
file-meta/file-meta/src/: hashes.cpp  main.cpp
snap/: snapcraft.yaml
snap/hooks/: configure  install  post-refresh
snap/plugins/: conan.py
